# enterprise-rag

./: .env.example  .gitignore  pyproject.toml
docs/: 01-mental-model.md  02-loader-design.md  day02-summary.md  day03-summary.md  day04-summary.md  day05-summary.md  day06-summary.md  day07-summary.md  day08-audit-25.txt  day08-audit-25b.txt  day08-audit-26.txt  day08-summary.md  day09-3way-cache.json  day09-decisions.md  day09-gold-pages.draft.json  day09-gold-pages.final.json  day09-l1-diagnosis-results.json  day09-l1-diagnosis.md  day09-param-audit-patch.md  day09-param-audit.txt  day09-summary.md  day09-td83-result.md  day10-summary.md  day11-eval-queries.json  day11-ragas-results.jsonl  day11-ragas-summary.md  day11-summary.md  day4_structure.md  project-overview_1-6.md  project-overview_1-8  project-overview_1-8.md  project-overview_7.md  project_map.md
scripts/: 01_explore_pdf.py  02_compare_loaders.py  03_test_loader.py  04_check_duplication.py  05_test_chunker.py  06_download_bge.py  07_similarity_experiment.py  08_test_embedder.py  09_embed_all_chunks.py  10_verify_naive_limit.py  11_test_qdrant.py  12_ingest_all.py  13_test_naive_rag.py  14.5_inspect_qdrant.py  14_test_tokenizer.py  15_test_bm25.py  16_compare_naive_vs_hybrid.py  17_test_multi_query.py  18_test_hyde.py  19_test_router.py  20_compare_all_methods.py  21_download_reranker.py  22_test_reranker_minimal.py  23_rerank_day6_regressions.py  23b_verify_data_boundary.py  24_compare_rerank_matrix.py  25_audit_data_missing.py  25b_audit_top5_quality.py  26_audit_chunking_fragment.py  29_test_prompt_v2.py  (+6 more)
(+20 files in other folders)
